--- a/preamble.sty
+++ b/preamble.sty
@@ -149,12 +149,14 @@
 \newcommand{\zerorelations}{\mathcal{J}}
 
 % Schur algebras
-% quantum affine Schur algebras
 \newcommand{\qschur}[1][n,r]{\hat{S}_q(#1)}
-% affine 0-Schur algebras
 \newcommand{\zeroschur}[1][n,r]{\hat{S}_0(#1)}
-% generic affine Schur algebras
 \newcommand{\generic}[1][n,r]{\hat{G}(#1)}
+
+% Hecke algebras
+\newcommand{\hecke}[1][r]{\hat{\mathcal{H}}_q(#1)}
+\newcommand{\zerohecke}[1][r]{\hat{\mathcal{H}}_0(#1)}
+
 
 %% Automorphisms of the generic algebra:
 % transpose symbol
