--- a/preamble.sty
+++ b/preamble.sty
@@ -89,6 +89,7 @@
 \newcommand{\rationals}{\mathbb{Q}}
 \newcommand{\naturals}{\mathbb{N}}
 \newcommand{\field}{\mathbf{k}}
+\newcommand{\modn}[1][n]{\integers/{#1 \integers}}
 
 % PROJECTIVE SPACES:
 \newcommand{\Proj}{\mathbb{P}}
@@ -162,7 +163,7 @@
 % transpose symbol
 \newcommand{\transpose}{\top}
 % transpose involution on the generic algebra
-\newcommand{\antipode}[1]{S{#1}}
+\newcommand{\antipode}[1]{S{(#1)}}
 % cyclic translation on generic algebra
 \newcommand{\rotation}[1]{\tau{#1}}
 
